get repos by username

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,2 @@
 <app-header></app-header>
-<label>Username:</label>
-<input [(ngModel)]="username" />
-<button (click)="getUserRepo()" class="btn btn-dark">GET DATA</button>
-<div class="container">
-  <div class="row">
-    <div
-      class="card col-md-4 text-center"
-      *ngFor="let dataitem of data"
-      style="width: 18rem;"
-    >
-      <img
-        src="{{ dataitem.owner.avatar_url }}"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5 class="card-title">{{ dataitem.name }}</h5>
-        <p class="card-text">{{ dataitem.full_name }}</p>
-        <a href="{{ dataitem.owner.html_url }}" class="card-text">{{
-          dataitem.owner.html_url
-        }}</a>
-        <br />
-        <a href="{{ dataitem.html_url }}" class="card-text">{{
-          dataitem.html_url
-        }}</a>
-        <br />
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
+<app-repos-list></app-repos-list>
