--- a/src/app/followers-list/followers-list.component.html
+++ b/src/app/followers-list/followers-list.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <app-repos-list-item
+    <app-followers-list-item
       class="col-md-4"
       *ngFor="let dataitem of data"
-      [singleRepo]="dataitem"
-    ></app-repos-list-item>
+      [singleFollower]="dataitem"
+    ></app-followers-list-item>
   </div>
 </div>
