fix repo and followers  output by name +  add routes

--- a/src/app/followers-list/followers-list.component.html
+++ b/src/app/followers-list/followers-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <app-followers-list-item
       class="col-md-4"
-      *ngFor="let dataitem of data"
+      *ngFor="let dataitem of followers"
       [singleFollower]="dataitem"
     ></app-followers-list-item>
   </div>
