--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a href="#">
+    <img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="" />
+  </a>
   <button
     class="navbar-toggler"
     type="button"
@@ -15,12 +17,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" (click)="onSelected('Repositories')" href="#"
           >My Repositories <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Followers</a>
+        <a class="nav-link" (click)="onSelected('Followers')" href="#"
+          >Followers</a
+        >
       </li>
       <li class="nav-item dropdown">
         <a
@@ -49,12 +53,12 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input
-        class="form-control mr-sm-2"
+        class="form-control mr-sm-2 bg-dark"
         type="search"
         placeholder="Search"
         aria-label="Search"
       />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
         Search
       </button>
     </form>
