--- a/src/app/repos-list/repos-list.component.html
+++ b/src/app/repos-list/repos-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <app-repos-list-item
       class="col-md-4"
-      *ngFor="let dataitem of data"
+      *ngFor="let dataitem of repos"
       [singleRepo]="dataitem"
     ></app-repos-list-item>
   </div>
