--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
-<app-header></app-header>
+<app-header (choiceSelected)="onChoiceSwitch($event)"></app-header>
 <label>Username:</label>
 <input [(ngModel)]="username" />
 <!-- btn (click) -->
-<button class="btn btn-dark">
+<button (click)="getUserFollowers(); getUserRepo()" class="btn btn-dark">
   GET DATA
 </button>
-<app-repos-list [username]="username"></app-repos-list>
-<app-followers-list [user]="username"></app-followers-list>
+<app-repos-list
+  *ngIf="loadedChoice === 'Repositories'"
+  [repos]="repos"
+  [username]="username"
+></app-repos-list>
+<app-followers-list
+  *ngIf="loadedChoice !== 'Repositories'"
+  [followers]="followers"
+  [user]="username"
+></app-followers-list>
