--- a/src/app/repos-list/repos-list-item/repos-list-item.component.html
+++ b/src/app/repos-list/repos-list-item/repos-list-item.component.html
@@ -1,21 +1,23 @@
-<div class="card bg-transparent border-0 text-center">
-  <!-- <img src="{{ singleRepo.owner.avatar_url }}" class="card-img-top" alt="..." /> -->
-  <img
-    src="https://octicons.github.com/img/og/repo.png"
-    class="card-img-top"
-    alt="..."
-  />
-  <div class="card-body">
-    <h3 class="card-title">{{ singleRepo.name }}</h3>
-    <p class="card-text">{{ singleRepo.full_name }}</p>
-    <a href="{{ singleRepo.owner.html_url }}" class="card-text">{{
-      singleRepo.owner.html_url
-    }}</a>
-    <br />
-    <a href="{{ singleRepo.html_url }}" class="card-text">{{
-      singleRepo.html_url
-    }}</a>
-    <br />
-    <a href="#" class="btn w-100 btn-dark">Details</a>
+<a style="cursor: pointer" (click)="onActiveRepo()">
+  <div class="card bg-transparent border-0 text-center">
+    <!-- <img src="{{ singleRepo.owner.avatar_url }}" class="card-img-top" alt="..." /> -->
+    <img
+      src="https://octicons.github.com/img/og/repo.png"
+      class="card-img-top"
+      alt="..."
+    />
+    <div class="card-body">
+      <h3 class="card-title">{{ singleRepo.name }}</h3>
+      <p class="card-text">{{ singleRepo.full_name }}</p>
+      <a href="{{ singleRepo.owner.html_url }}" class="card-text">{{
+        singleRepo.owner.html_url
+      }}</a>
+      <br />
+      <a href="{{ singleRepo.html_url }}" class="card-text">{{
+        singleRepo.html_url
+      }}</a>
+      <br />
+      <a class="btn w-100 btn-dark">Details</a>
+    </div>
   </div>
-</div>
+</a>
